* 静的グラフ表示の追加（仮） * Logクラスの追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MPAndroidChartSample</string>
+
+    <string name="StaticLineGraph_Description">StaticLineGraphSample</string>
+
+    <string-array name="SampleLists">
+        <item>StaticLineGraph</item>
+    </string-array>
 </resources>
