--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MPAndroidChartSample</string>
 
     <string name="StaticLineGraph_Description">StaticLineGraphSample</string>
+    <string name="sine_wave">Sine Wave</string>
 
     <string-array name="SampleLists">
         <item>StaticLineGraph</item>
