--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,14 @@
     <string name="app_name">MPAndroidChartSample</string>
 
     <string name="StaticLineGraph_Description">StaticLineGraphSample</string>
+    <string name="StaticMultiGraph_Description">StaticMultiLineGraphSample</string>
+
     <string name="sine_wave">Sine Wave</string>
+    <string name="cosine_wave">Cosine Wave</string>
+    <string name="tangent_wave">Tangent Wave</string>
 
     <string-array name="SampleLists">
         <item>StaticLineGraph</item>
+        <item>StaticMultiLineGraph</item>
     </string-array>
 </resources>
