--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,18 @@
     <string name="StaticLineGraph_Description">StaticLineGraphSample</string>
     <string name="StaticMultiLineGraph_Description">StaticMultiLineGraphSample</string>
     <string name="DynamicLineGraph_Description">DynamicLineGraphSample</string>
+    <string name="DynamicMultiLineGraph_Description">DynamicMultiLineGraphSample</string>
 
     <string name="sine_wave">Sine Wave</string>
     <string name="cosine_wave">Cosine Wave</string>
     <string name="tangent_wave">Tangent Wave</string>
 
+    <string name="pi_label">%1$dπ</string>
+
     <string-array name="SampleLists">
         <item>StaticLineGraph</item>
         <item>StaticMultiLineGraph</item>
         <item>DynamicLineGraph</item>
+        <item>DynamicMultiLineGraph</item>
     </string-array>
 </resources>
