--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">MPAndroidChartSample</string>
 
+    <string name="staticLineGraphMenu_save">SAVE</string>
+
     <string name="StaticLineGraph_Description">StaticLineGraphSample</string>
     <string name="StaticMultiLineGraph_Description">StaticMultiLineGraphSample</string>
     <string name="DynamicLineGraph_Description">DynamicLineGraphSample</string>
