--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
 
     <string name="staticLineGraphMenu_save">SAVE</string>
 
+    <string name="temp_text">xxxxx</string>
+
     <string name="StaticLineGraph_Description">StaticLineGraphSample</string>
     <string name="StaticMultiLineGraph_Description">StaticMultiLineGraphSample</string>
     <string name="DynamicLineGraph_Description">DynamicLineGraphSample</string>
     <string name="DynamicMultiLineGraph_Description">DynamicMultiLineGraphSample</string>
+    <string name="StaticVerticalBarGraph_Description">StaticVerticalBarGraphSample</string>
 
     <string name="sine_wave">Sine Wave</string>
     <string name="cosine_wave">Cosine Wave</string>
@@ -19,5 +22,21 @@
         <item>StaticMultiLineGraph</item>
         <item>DynamicLineGraph</item>
         <item>DynamicMultiLineGraph</item>
+        <item>StaticVerticalBarGraph</item>
+    </string-array>
+
+    <string-array name="Month">
+        <item>Jan.</item>
+        <item>Feb.</item>
+        <item>Mar.</item>
+        <item>Apr.</item>
+        <item>May</item>
+        <item>Jun.</item>
+        <item>Jul.</item>
+        <item>Aug.</item>
+        <item>Sep.</item>
+        <item>Oct.</item>
+        <item>Nov.</item>
+        <item>Dec.</item>
     </string-array>
 </resources>
